2021-07-29 James D. Trotter <james@simula.no>

	Add paraview 5.9.1, qt5 5.15.2, mesa 21.1.5, libdrrm 2.4.107 and
	python-mako-1.1.4, various xcb-util packages and xkbcommon 1.3.0.

2021-06-16 James D. Trotter <james@simula.no>

	Add CGAL 4.12.2 and 5.2.2 and mshr 2019.1.0.

	Disable multithreading in OpenBLAS.

2021-05-20 James D. Trotter <james@simula.no>

	Add protobuf-cpp, protobuf-python and mysql-connector-python.

2021-05-10 James D. Trotter <james@simula.no>

	Add hunspell.

2021-04-13 James D. Trotter <james@simula.no>

	Add automake.

	Add TexLive and a number of its dependencies. Also, partially
	address circular dependency between harfbuzz, graphite2 and
	freetype.

2021-03-22 James D. Trotter <james@simula.no>

	Add an option and make flag to enable CUDA support instead of relying on ARCH

2021-03-19 James D. Trotter <james@simula.no>

        Released version 0.6.0.

	Upgrade hwloc 2.0.4 -> 2.4.1.

2020-10-25 James D. Trotter <james@simula.no>

        Initial version.

Copyright (C) 2021 James D. Trotter
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.